force-app/main/default/objects/NotificationReceived__e/NotificationReceived__e.object-meta.xml
<CustomObject>
    <label>Notification</label>
    <pluralLabel>Notifications</pluralLabel>
</CustomObject>