force-app/main/default/objects/NotificationReceived__e/fields/txt_JobName__c.field-meta.xml
<CustomField>
    <fullName>txt_JobName__c</fullName>
    <label>Job Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>