force-app/main/default/objects/NotificationReceived__e/fields/txt_Status__c.field-meta.xml
<CustomField>
    <fullName>txt_Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>